--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,27 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>sonar</groupId>
-    <artifactId>sonar</artifactId>
+    <artifactId>mi-plugin-tableau</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <parent>
+        <groupId>com.metricinsights</groupId>
+        <artifactId>mi-plugin-base</artifactId>
+        <version>2.3.1-SNAPSHOT</version>
+    </parent>
+    <properties>
+        <maintainer>nick/maintainer>
+        <maintainerEmail>nick@metricinsights.com</maintainerEmail>
+        <plugin.standalone.name>sonar vars</plugin.standalone.name>
+        <!-- Default test category. -->
+        <test.category>All</test.category>
+    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore</artifactId>
+            <version>4.4.4</version>
+        </dependency>
+    </dependencies>
+    <name>sonar vars</name>
 </project>
