--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>sonar vars</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <parent>
+        <groupId>com.metricinsights</groupId>
+        <artifactId>mi-plugin-base</artifactId>
+        <version>2.3.1-SNAPSHOT</version>
+    </parent>
     <properties>
         <maintainer>nick</maintainer>
         <maintainerEmail>nick@metricinsights.com</maintainerEmail>
