--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>sonar vars</artifactId>
+    <artifactId>sonar_vars</artifactId>
     <version>1.0-SNAPSHOT</version>
     <parent>
         <groupId>com.metricinsights</groupId>
@@ -12,9 +12,8 @@
     <properties>
         <maintainer>nick</maintainer>
         <maintainerEmail>nick@metricinsights.com</maintainerEmail>
-        <plugin.standalone.name>sonar vars</plugin.standalone.name>
+        <plugin.standalone.name>sonar</plugin.standalone.name>
         <!-- Default test category. -->
-        <test.category>All</test.category>
     </properties>
     <dependencies>
         <dependency>
@@ -23,5 +22,10 @@
             <version>4.4.4</version>
         </dependency>
     </dependencies>
-    <name>sonar vars</name>
+    <name>mi-plugin-tableau</name>
+    <description>Plugin to pull in data from Tableau Views</description>
+    <scm>
+        <connection>scm:git:${project.scm.url}</connection>
+        <url>git@github.com:metricinsights/mi-plugin-tableau.git</url>
+    </scm>
 </project>
