--- a/sonar-runner.properties
+++ b/sonar-runner.properties
@@ -2,12 +2,12 @@
 #No information about specific project should appear here
 
 # Required metadata
-sonar.projectKey=sonar-vars
-sonar.projectName=Soanr Vars
+sonar.projectKey=sonar
+sonar.projectName=Sonar Vars
 sonar.projectVersion=test
 
 # Comma-separated paths to directories with sources (required)
-sonar.sources=mi-plugin-tableau/src
+sonar.sources=SonarVars/src
 
 # Language
 sonar.language=java
