--- a/sonar-runner.properties
+++ b/sonar-runner.properties
@@ -5,6 +5,8 @@
 sonar.projectKey=sonar
 sonar.projectName=Sonar Vars
 sonar.projectVersion=test
+sonar.login=admin
+sonar.password=Ins1ght!
 
 # Comma-separated paths to directories with sources (required)
 sonar.sources=SonarVars/src
